fixed flex-wrap property on container form and transform on checkbox

--- a/src/styles.css
+++ b/src/styles.css
@@ -128,7 +128,7 @@ main {
 #my-recipes-checkbox {
   width: 45px;
   aspect-ratio: 1 / 1;
-  transform: 0.5;
+  transform: scale(0.5);
 }
 
 #show-my-recipes-label {
@@ -157,7 +157,7 @@ main {
   font-size: 1.6vw;
 }
 
-#filter-by-tag-label {
+#filter-type-label {
   font-size: 1.7vw;
 }
 
@@ -209,7 +209,7 @@ container header {
   form {
     display: flex;
     align-items: center;
-    flex-wrap: no-wrap;
+    flex-wrap: nowrap;
     gap: 0.5em;
   }
 
